# mini_nn

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
html/: _r_e_a_d_m_e_8md.html  activation_8hpp.html  activation_8hpp__dep__incl.dot  activation_8hpp__dep__incl.map  activation_8hpp__dep__incl.md5  activation_8hpp__incl.dot  activation_8hpp__incl.map  activation_8hpp__incl.md5  activation_8hpp_source.html  activation__impl_8hpp.html  activation__impl_8hpp__dep__incl.dot  activation__impl_8hpp__dep__incl.map  activation__impl_8hpp__dep__incl.md5  activation__impl_8hpp_source.html  annotated.html  class_conv2d-members.html  class_conv2d.html  class_conv2d__coll__graph.map  class_conv2d__coll__graph.md5  class_conv2d__inherit__graph.md5  class_layer-members.html  class_layer.html  class_layer__inherit__graph.map  class_layer__inherit__graph.md5  class_linear-members.html  class_linear.html  class_linear__coll__graph.map  class_linear__coll__graph.md5  class_linear__inherit__graph.map  class_linear__inherit__graph.md5  class_loss-members.html  class_loss.html  class_max_pool2d-members.html  class_max_pool2d.html  class_max_pool2d__coll__graph.map  class_max_pool2d__coll__graph.md5  class_max_pool2d__inherit__graph.md5  class_network-members.html  class_network.html  class_optimizer-members.html  (+199 more)
html/search/: all_0.js  all_1.js  (+60 more)
latex/: activation_8hpp.tex  activation_8hpp__dep__incl.dot  activation_8hpp__dep__incl.md5  activation_8hpp__incl.dot  activation_8hpp__incl.md5  activation__impl_8hpp.tex  activation__impl_8hpp__dep__incl.dot  activation__impl_8hpp__dep__incl.md5  annotated.tex  class_conv2d.eps  class_conv2d.tex  class_conv2d__coll__graph.md5  class_conv2d__inherit__graph.md5  class_layer.eps  class_layer.tex  class_layer__inherit__graph.md5  class_linear.eps  class_linear.tex  class_linear__coll__graph.md5  class_linear__inherit__graph.md5  class_loss.tex  class_max_pool2d.eps  class_max_pool2d.tex  class_max_pool2d__coll__graph.md5  class_max_pool2d__inherit__graph.md5  class_network.tex  class_optimizer.eps  class_optimizer.tex  class_optimizer__inherit__graph.md5  class_re_l_u.eps  class_re_l_u.tex  class_re_l_u__coll__graph.md5  class_re_l_u__inherit__graph.md5  class_s_g_d.eps  class_s_g_d.tex  class_s_g_d__coll__graph.md5  class_s_g_d__inherit__graph.md5  common__header_8hpp.tex  common__header_8hpp__dep__incl.dot  common__header_8hpp__dep__incl.md5  (+95 more)
layer/: activation.hpp  activation_impl.hpp  convolution.hpp  convolution_impl.hpp  layer.hpp  layer_base.hpp  layer_common.hpp  linear.hpp  linear_impl.hpp  pooling.hpp  pooling_impl.hpp
loader/: data_loader.hpp  data_loader_impl.hpp  model_loader.hpp
loss/: loss.hpp  loss_impl.hpp
network/: common_header.hpp  init.hpp  network.hpp  network_impl.hpp  utils.hpp
optimizer/: SGD.hpp  optimizer.hpp  optimizer_base.hpp  optimizer_impl.hpp
py_helper/: leNet.py  netsaver.py  temp.pth
test/: CMakeLists.txt  test_layer.cpp  test_loader.cpp  test_mnist.cpp  test_net.cpp
(+9 files in other folders)
